<resources>
    <string name="app_name">وام خانوادگی</string>
    <string name="app_service">سرویس اعلان سررسید اقساط</string>
    <string name="developerName">بهروز محمدی</string>
    <string name="loan_name">نام صندوق</string>
    <string name="app_menu">منو اصلی</string>
    <string name="organization">صندوق خانوادگی</string>
    <string name="help">راهنما</string>
    <string name="action_settings">تنظیمات</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="sortBasedOn">مرتب سازی بر اساس</string>
    <string name="name">نام</string>
    <string name="actionMenu">منوی عملیات</string>
    <string name="family">نام خانوادگی</string>
    <string name="phone">تلفن</string>
    <string name="accountNumber">شماره حساب</string>
    <string name="wallets">سپرده ها</string>
    <string name="wallet">سپرده</string>
    <string name="lastThree">سه واریز آخر</string>
    <string name="lastLoan">آخرین وام</string>
    <string name="loan">وام</string>
    <string name="sort">مرتب سازی</string>
    <string name="loanTitle">عنوان وام</string>
    <string name="delayed">اقساط معوقه</string>
    <string name="borrower">وام گیرنده</string>
    <string name="debit">دریافت</string>
    <string name="receive">دریافت</string>
    <string name="payment">پرداخت</string>
    <string name="deposit">واریز</string>
    <string name="withdrawal">برداشت</string>
    <string name="paid">پرداخت شده</string>
    <string name="unpaid">پرداخت نشده</string>
    <string name="not">نشده</string>
    <string name="done">شده</string>
    <string name="installments">اقساط</string>
    <string name="nationalCode">کد ملی</string>
    <string name="subscribCode">کد عضویت</string>
    <string name="remain">مبلغ مانده</string>
    <string name="remainLoan">مانده وام</string>
    <string name="search">جستجو</string>
    <string name="dayOfMonth">روز سررسید</string>
    <string name="nextDayOfMonth">سررسید قسط بعدی</string>
    <string name="lastInstallment">سررسید آخرین قسط</string>
    <string name="settled">تسویه</string>
    <string name="setting">تنظیمات</string>
    <string name="checkCashRemain">بررسی مانده صندوق در هنگام ثبت وام</string>
    <string name="affectNext">ویرایش مبلغ قسط و متاثر شدن قسط بعدی</string>
    <string name="installment">تعداد قسط</string>
    <string name="installmentPaid">تعداد اقساط پرداخت شده</string>
    <string name="loanAmount">مبلغ وام</string>
    <string name="installmentAmount">مبلغ قسط</string>
    <string name="firstInstallmentAmount">مبلغ اولین قسط</string>
    <string name="otherInstallmentAmount">مبلغ بقیه اقساط</string>
    <string name="amount">مبلغ</string>
    <string name="status">وضعیت</string>
    <string name="communicate">برقراری ارتباط</string>
    <string name="locationUpdated">مختصات به روز رسانی شد</string>
    <string name="locationDoesNotUpdated">مختصات به روز رسانی نشده است</string>
    <string name="lastUpdateTime">آخرین زمان بروزرسانی</string>
    <string name="share">اشتراک گزاری</string>
    <string name="send">ارسال</string>
    <string name="legal">قانونی</string>
    <string name="coordinates">مختصات</string>
    <string name="navigation_drawer_open">باز کردن منو</string>
    <string name="navigation_drawer_close">بستن منو</string>
    <string name="code">کد</string>
    <string name="title">عنوان</string>
    <string name="value">مقدار</string>
    <string name="exitAndBackup">پشتیبان گیری و خروج</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="open">باز</string>
    <string name="close">بسته</string>
    <string name="serverAddress">آدرس سرور</string>
    <string name="currencyType">نوع ارز</string>
    <string name="installmentList">لیست اقساط</string>
    <string name="dbPath">مسیر فایل استخراج شده</string>
    <string name="newVersionAvailable">نسخه جدیدی از این برنامه موجود می باشد، آیا مایل به بروز رسانی میباشید.</string>
    <string name="version">نگارش</string>
    <string name="parameters">پارامتر ها</string>
    <string name="general">عمومی</string>
    <string name="notifyDayOfLoan">اعلان سررسید اقساط</string>
    <string name="showSettledLoan">نمایش وام های تسویه شده</string>
    <string name="withDeposit">با سپرده</string>
    <string name="withoutDeposit">بدون سپرده</string>
    <string name="toman">تومان</string>
    <string name="edit">ویرایش</string>
    <string name="create">ایجاد</string>
    <string name="delete">حذف</string>
    <string name="save">ذخیره</string>
    <string name="NetworkNotAvailable">شبکه در دسترس نیست</string>
    <string name="pleaseWait">لطفا صبر کنید</string>
    <string name="pleaseTurnOnGps">لطفا موقعیت مکانی را فعال کنید</string>
    <string name="loading">در حال بارگذاری</string>
    <string name="msg_no_perm">متاسفانه! این برنامه را نمی توانید بدون اجازه اجرا کنید!</string>
    <string name="about">درباره</string>
    <string name="rowNum">ردیف</string>
    <string name="sample">نمونه</string>
    <string name="submit">ثبت</string>
    <string name="select">انتخاب</string>
    <string name="cancel">انصراف</string>
    <string name="description">شرح</string>
    <string name="ascending">صعودی</string>
    <string name="descending">نزولی</string>
    <string name="city">شهر</string>
    <string name="next">بعدی</string>
    <string name="areYouSure">آیا مطمئن هستید ؟</string>
    <string name="cannotDeleteThisItem">امکان حذف این مورد وجود ندارد</string>
    <string name="exit">خروج</string>
    <string name="areYouSureForNewImage">تصویر قبلی پاک میشود آیا مطمئن هستید ؟</string>
    <string name="date">تاریخ</string>
    <string name="subscribeDate">تاریخ عضویت</string>
    <string name="receiveDate">تاریخ دریافت</string>
    <string name="receiveDate1">تاریخ دریافت از</string>
    <string name="receiveDate2">تاریخ دریافت تا</string>
    <string name="winDate">تاریخ برنده شدن وام</string>
    <string name="beginDate">از تاریخ</string>
    <string name="endDate">تا تاریخ</string>
    <string name="report">گزارش گیری از عملکرد</string>
    <string name="backupAndRestore">بازگردانی و استخراج</string>
    <string name="backup">استخراج</string>
    <string name="restore">بازگردانی</string>
    <string name="cash">صندوق</string>
    <string name="cashRemain">مانده صندوق</string>
    <string name="totalCount">تعداد کل</string>
    <string name="totalSum">جمع کل</string>
    <string name="loanSum">جمع وامها</string>
    <string name="remainSum">جمع مانده ها</string>
    <string name="todayCount">تعداد امروز</string>
    <string name="sync">همگام سازی</string>
    <string name="itemsAction">عملیات آیتم ها</string>
    <string name="loanPayTime">زمان پرداخت اقساط وام</string>
    <string name="isComming">فرا رسیده است.</string>
    <string name="withAmount">به مبلغ</string>
    <string name="print">چاپ</string>
    <string name="crop">برش</string>
    <string name="picture">تصویر</string>
    <string name="mainPage">صفحه اصلی</string>
    <string name="fullscreen_content">وام خانوادگی</string>
    <string name="title_activity_login">ورود کاربر</string>
    <string name="log_out">خروج کاربر</string>
    <string name="prompt_mobile">شماره موبایل</string>
    <string name="prompt_activationCode">کد فعال سازی</string>
    <string name="action_sign_in">ورود</string>
    <string name="error_invalid_mobile">شماره موبایل نا معتبر است</string>
    <string name="error_invalid_activationCode">کد فعال سازی باید 6 رقم باشد</string>
    <string name="error_field_required">این فیلد اجباریست</string>
    <string name="error_first_make_backup">میبایست ابتدا بکاپ بگیرید</string>
    <string name="error_field_invalid">این فیلد نامعتبر است</string>
    <string name="error_invalid_field">{0} نا معتبر است</string>
    <string name="error_network">خطا در اتصال به شبکه اینترنت</string>
    <string name="error_invalid_img">لطفا تصویر را وارد کنید</string>
    <string name="error_cash_not_enouf">مانده صندوق کمتر از مبلغ وام می باشد</string>
    <string name="title_activity_cash_list">لیست صندوق ها</string>
    <string name="title_activity_cash">تعریف صندوق</string>
    <string name="title_activity_person">ثبت افراد</string>
    <string name="title_activity_person_list">لیست افراد</string>
    <string name="title_activity_loan_list">لیست وامها</string>
    <string name="title_activity_loan">ثبت وام</string>
    <string name="title_activity_debitCredit_list">لیست اقساط افراد</string>
    <string name="title_activity_debitCredit">درج اقساط افراد</string>
    <string name="title_activity_wallet_list">لیست سپردها</string>
    <string name="title_activity_wallet">ثبت سپرده ها</string>
    <string name="title_activity_person_list_help">راهنمای لیست افراد</string>
    <string name="title_activity_loan_list_help">راهنمای لیست وامها</string>
    <string name="title_activity_wallet_list_help">راهنمای لیست سپرده ها</string>
    <string name="title_activity_debit_credit_list_help">راهنمای لیست اقساط</string>
    <string name="personItemsAction">در لیست افراد برای مشاهده منوی عملیات آن را لمس کنید و چند لحظه نگه دارید. به عنوان مثال ارسال گزارش متنی از عملکرد آن فرد از طریق همین منو قابل انجام است.</string>
    <string name="loanItemsAction">در لیست وام ها برای مشاهده منوی عملیات آن را لمس کنید و چند لحظه نگه دارید. به عنوان مثال نمایش لیست اقساط وام مورد نظر از طریق همین منو قابل انجام است.</string>
    <string name="searchAction1">در هر لیست برای جستجو، دکمه </string>
    <string name="searchAction2"> را در نوار بالای صفحه لمس کنید. </string>
    <string name="sortAction1">در هر لیست برای مرتب سازی، دکمه </string>
    <string name="sortAction2"> را در نوار بالای صفحه لمس کنید. </string>
    <string name="printAction">در هر لیست برای چاپ یا ذخیره آن به صورت PDF، دکمه چاپ را در نوار بالای صفحه لمس کنید. در صورت نیاز میتوانید فیلتر جستجو و مرتب سازی مورد نظر خود را هم اعمال کنید، سپس اقدام به چاپ لیست کنید.</string>
    <string name="personDelayedColumn">در لیست افراد اقساط معوقه به این معنی است که، قسط های پرداخت نشده ای از آن فرد وجود دارد که تاریخ قسط آن قبل از امروز میباشد.</string>
    <string name="loanDelayedColumn">در لیست وام ها اقساط معوقه به این معنی است که، قسط های پرداخت نشده ای از آن وام وجود دارد که تاریخ قسط آن قبل از امروز میباشد.</string>
    <string name="loanWinDateColumn">اگر در تنظیمات برنامه گزینه بدون سپرده انتخاب شده باشد، فیلد تاریخ برنده شدن وام در لیست وام ها دیده میشود که نشان دهنده تاریخ برنده شدن آن شخص در قرعه کشی میباشد و در محاسبه مانده صندوق هم تاثیر میگذارد.</string>
    <string name="remainColumn">در لیست وام ها مانده برابر است با مجموع اقساط پرداخت نشده آن وام.</string>
    <string name="itemsColor">رنگ آیتم ها</string>
    <string name="loanItemColorDesc">در لیست وام ها آیتم های طوسی رنگ به معنی تسویه شده و غیر قابل ویرایش میباشد و آیتم های سفید رنگ به معنی تسویه نشده و قابل ویرایش میباشد.</string>
    <string name="installmentstColor">در لیست اقساط آیتم های طوسی رنگ به معنی پرداخت نشده میباشد و آیتم های سفید رنگ به معنی پرداخت شده میباشد.</string>
    <string name="editInstallment">ویرایش اقساط</string>
    <string name="editInstallmentDesc">برای ثبت پرداخت یک قسط میبایست آن آیتم را بزنید سپس وضعیت قسط را از پرداخت نشده به پرداخت شده تغییر دهید. \n\n
حتی میتوانید مبلغ آن قسط را هم کاهش یا فزایش بدهید، درصورتیکه مبلغ قسط افزایش پیدا کند به همان میزان از مبلغ قسط بعدی کاسته میشود و برعکس اگر مبلغ قسط کاهش داده شود به همان میزان به مبلغ قسط بعدی اضافه میشود و اگر مبلغ آخرین قسط تغییر کند هیچ تغییری اعمال نمیشود.
</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="iransansLT">fonts/IRANSans-UltraLight-web.ttf</string>
    <string name="iransansMD">fonts/IRANSans-Medium-web.ttf</string>
</resources>