<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_loan"/>

    <ir.behrooz.loan.widget.TextViewPlus
        android:id="@+id/menu_header_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        custom:tvp_size="16"
        custom:tvp_fontName="@string/iransansMD"
        custom:tvp_color="@color/md_white_1000"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <ir.behrooz.loan.widget.TextViewPlus
        android:id="@+id/menu_header_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        custom:tvp_size="12"
        custom:tvp_color="@color/md_white_1000"
        android:text="@string/organization"/>

</LinearLayout>
