<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sortHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/md_green_A700"
        android:gravity="center"
        android:text="@string/sortBasedOn"
        android:textColor="@color/md_white_1000"
        android:textSize="14dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/appbar_padding_top">
        <ListView
            android:id="@+id/sortList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginBottom="@dimen/appbar_padding_top"
            android:divider="@color/mdtp_done_text_color_dark_disabled"
            android:dividerHeight="1px" />
        <LinearLayout
            android:id="@+id/sortBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/descSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mdtp_white"
                android:padding="12dp"
                android:text="@string/descending"
                android:textColor="@color/md_green_A700"
                android:textSize="12dp" />

            <Button
                android:id="@+id/ascSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mdtp_white"
                android:padding="12dp"
                android:text="@string/ascending"
                android:textColor="@color/md_green_A700"
                android:textSize="12dp" />

            <Button
                android:id="@+id/cancelSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mdtp_white"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/mdtp_dark_gray"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>